overflow fix

--- a/TypescriptSneezingGiraffe/style.scss
+++ b/TypescriptSneezingGiraffe/style.scss
@@ -26,7 +26,6 @@ body
   @return 2*$pi*$r;
 }
 
-//!todo
 ::selection {
   color: white;
   background: grey;
@@ -47,7 +46,7 @@ body
     animation-timing-function: ease-in-out;
     transition: opacity 2s ease-in;
     max-width:100%;
-max-height:100%;
+    max-height:100%;
     
 }
 
@@ -508,7 +507,7 @@ max-height:100%;
         to {
           transform: translate3d(
             #{random(100)-150 + vw},
-            #{ $startPositionY - random(500)+500  + vh},
+            #{ $startPositionY - random(300)+300  + vh},
             0
           );
         }
